# lcdd

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindGDML.cmake  LCDDConfig.cmake.in  LCDDConfigVersion.cmake.in
config/doxygen/: lcdd_doxygen.cfg.in
doc/schemas/: links.xml  xs3p.xsl
examples/detectors/: ILD_toy.lcdd  mcdrcal01.lcdd
examples/processors/: BasicCalorimeterHitProcessorTest.lcdd  LegacyCalorimeterHitProcessorTest.lcdd  OpticalCalorimeterHitProcessor.lcdd  UnsegmentedCalorimeterHitProcessorTest.lcdd
examples/segmentation/: CartesianGridXY.lcdd  CartesianGridXYZ.lcdd  CartesianGridXZ.lcdd  CellReadout2D.lcdd  ProjectiveCylinder.lcdd
examples/setup/: MultipleSetups.lcdd
include/lcdd/bfield/: BoxDipole.hh  Cartesian3DMagneticFieldMap.hh  Dipole.hh  FieldManager.hh  MagneticFieldOverlay.hh  RZBData.hh  RZFieldMap.hh  Solenoid.hh
include/lcdd/core/: GeometryManager.hh  LCDDDetectorConstruction.hh  LCDDMessenger.hh  LCDDObjectStoreInspector.hh  LCDDParser.hh  LCDDProcessor.hh  UserRegionInformation.hh  VUserTrackInformation.hh
include/lcdd/detectors/: BasicCalorimeterHitProcessor.hh  BasicTrackerHitProcessor.hh  CalorimeterHitProcessor.hh  CalorimeterSD.hh  Cerenkov.hh  CurrentTrackState.hh  DDSegmentationCalorimeterHitProcessor.hh  HitComparator.hh  HitProcessor.hh  HitProcessorFactory.hh  HitProcessorManager.hh  LegacyCalorimeterHitProcessor.hh  OpticalCalorimeterHitProcessor.hh  PositionComparator.hh  ReadoutUtil.hh  ScoringTrackerHitProcessor.hh  SensitiveDetector.hh  SensitiveDetectorFactory.hh  SensitiveDetectorMessenger.hh  StepCombiningTrackerHitProcessor.hh  StepReadout.hh  TrackerHitProcessor.hh  TrackerSD.hh  UnsegmentedCalorimeterHitProcessor.hh
include/lcdd/geant4/: LCDDHeaderRecord.hh  PhysVolId.hh  PhysVolIdMap.hh  PhysicsLimitSet.hh  UserRegionInformation.hh  VUserTrackInformation.hh
include/lcdd/hits/: CalorimeterHit.hh  CalorimeterHitMap.hh  HitContribution.hh  TrackInformation.hh  TrackerHit.hh
include/lcdd/id/: Id64bit.hh  IdComparator.hh  IdFactory.hh  IdField.hh  IdManager.hh  IdSpec.hh  IdVec.hh
include/lcdd/processes/: FieldMapTypeProcess.hh  FieldTypeProcess.hh  SensitiveDetectorTypeProcess.hh  calorimeterProcess.hh  hit_processorProcess.hh  hits_collectionProcess.hh
include/lcdd/schema/: AuthorType.hh  BoxDipoleType.hh  CalorimeterType.hh  CartesianGridXYType.hh  CartesianGridXYZType.hh  CartesianGridXZType.hh  CellReadout2DSegmentationType.hh  ColorType.hh  CommentType.hh  DetectorType.hh  DipoleCoeffType.hh  DipoleType.hh  FieldMap3DType.hh  FieldMapType.hh  FieldType.hh  GeneratorType.hh  GlobalFieldType.hh  GlobalGridXYSegmentationType.hh  HeaderType.hh  HitProcessorType.hh  HitsCollectionType.hh  IdFieldType.hh  IdSpecType.hh  LimitParamType.hh  LimitSetType.hh  LimitType.hh  NonprojectiveCylinderSegmentationType.hh  NonprojectiveSegmentationType.hh  PhysVolIdType.hh  ProjectiveCylinderSegmentationType.hh  ProjectiveCylinderType.hh  ProjectiveZPlaneSegmentationType.hh  RZBType.hh  RZFieldMapType.hh  RegionType.hh  SegmentationType.hh  SensitiveDetectorType.hh  SolenoidType.hh  TrackerType.hh  VisType.hh  (+37 more)
include/lcdd/segmentation/: CellReadout.hh  CellReadout2D.hh  CellReadout2DSegmentation.hh  GlobalGridXYSegmentation.hh  GridXYZSegmentation.hh  NonprojectiveCylinderSegmentation.hh  ProjectiveCylinderSegmentation.hh  ProjectiveSegmentation.hh  ProjectiveZPlaneSegmentation.hh  Segmentation.hh  SegmentationFactory.hh
include/lcdd/subscribers/: volumeExtendedSubscriber.hh
include/lcdd/util/: ElementNames.icc  GDMLWriter.hh  GDMLWriterMessenger.hh  NistElementsDump.hh  StoreInspector.hh  StringUtil.hh  TimeUtil.hh  TimerUtil.hh  Verbose.hh
schemas/lcdd/1.0/: lcdd_sensitive_detectors.xsd
schemas/lcdd/2.0/: lcdd.xsd  lcdd_display.xsd  lcdd_fields.xsd  lcdd_header.xsd  lcdd_iddict.xsd  lcdd_limits.xsd  lcdd_regions.xsd  lcdd_sensitive_detectors.xsd
scripts/: create-schema-doc.sh.in  download_gdml_schemas.sh  download_lcdd_schemas.sh  rtag.sh
src/lcdd/bfield/: BoxDipole.cc  Cartesian3DMagneticFieldMap.cc  Dipole.cc  FieldManager.cc  MagneticFieldOverlay.cc  RZBData.cc  RZFieldMap.cc  Solenoid.cc
src/lcdd/core/: GeometryManager.cc  LCDDDetectorConstruction.cc  LCDDHeaderRecord.cc  LCDDLibLoad.cc  LCDDMessenger.cc  LCDDParser.cc  LCDDProcessor.cc  PhysicsLimitSet.cc
src/lcdd/detectors/: BasicCalorimeterHitProcessor.cc  BasicTrackerHitProcessor.cc  CalorimeterHitProcessor.cc  CalorimeterSD.cc  Cerenkov.cc  CurrentTrackState.cc  DDSegmentationCalorimeterHitProcessor.cc  HitProcessor.cc  HitProcessorFactory.cc  HitProcessorManager.cc  LegacyCalorimeterHitProcessor.cc  OpticalCalorimeterHitProcessor.cc  PositionComparator.cc  ReadoutUtil.cc  ScoringTrackerHitProcessor.cc  SensitiveDetector.cc  SensitiveDetectorFactory.cc  SensitiveDetectorMessenger.cc  StepCombiningTrackerHitProcessor.cc  StepReadout.cc  TrackerHitProcessor.cc  TrackerSD.cc  UnsegmentedCalorimeterHitProcessor.cc
src/lcdd/geant4/: LCDDHeaderRecord.cc  PhysVolId.cc  PhysVolIdMap.cc  PhysicsLimitSet.cc
src/lcdd/hits/: CalorimeterHit.cc  CalorimeterHitMap.cc  HitContribution.cc  TrackInformation.cc  TrackerHit.cc
src/lcdd/id/: Id64bit.cc  IdComparator.cc  IdFactory.cc  IdField.cc  IdFieldProcess.cc  IdManager.cc  IdSpec.cc  IdVec.cc  PhysVolId.cc  PhysVolIdMap.cc
src/lcdd/processes/: authorProcess.cc  box_dipoleProcess.cc  calorimeterProcess.cc  cartesian_grid_xyProcess.cc  cartesian_grid_xyzProcess.cc  cartesian_grid_xzProcess.cc  cell_readout_2dProcess.cc  colorProcess.cc  commentProcess.cc  detectorProcess.cc  dipoleProcess.cc  dipole_coeffProcess.cc  field_map_3dProcess.cc  fieldrefProcess.cc  generatorProcess.cc  global_fieldProcess.cc  global_grid_xyProcess.cc  grid_xyzProcess.cc  headerProcess.cc  hit_processorProcess.cc  hits_collectionProcess.cc  idspecProcess.cc  idspecrefProcess.cc  limitProcess.cc  limitrefProcess.cc  limitsetProcess.cc  limitsetrefProcess.cc  nonprojective_cylinderProcess.cc  physvolidProcess.cc  projective_cylinderProcess.cc  projective_cylinder_oldProcess.cc  projective_zplaneProcess.cc  regionProcess.cc  (+9 more)
(+36 files in other folders)
